// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ToolGroupMessage /> > Ask User Filtering > filtering logic for status='error' and hasResult='error message' 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ x  Ask User                                                              │
│                                                                          │
│ error message                                                            │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Ask User Filtering > filtering logic for status='success' and hasResult='test result' 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  Ask User                                                              │
│                                                                          │
│ 1 line of output                                                         │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Ask User Filtering > shows other tools when ask_user is filtered out 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  other-tool A tool for testing                                         │
│                                                                          │
│ 1 line of output                                                         │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Border Color Logic > uses gray border when all tools are successful and no shell commands 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                          │
│                                                                          │
│ 1 line of output                                                         │
│                                                                          │
│ ✓  another-tool A tool for testing                                       │
│                                                                          │
│ 1 line of output                                                         │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Border Color Logic > uses yellow border for shell commands even when successful 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  run_shell_command A tool for testing                                  │
│                                                                          │
│ 1 line of output                                                         │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders empty tool calls array 1`] = `""`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders header when scrolled 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  tool-1 Description 1. This is a long description that will need to b… │
│                                                                          │
│ 5 lines of output                                                        │
│                                                                          │
│ ✓  tool-2 Description 2                                                  │
│                                                                          │
│ 2 lines of output                                                        │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders mixed tool calls including shell command 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  read_file Read a file                                                 │
│                                                                          │
│ 1 line of output                                                         │
│                                                                          │
│ ⊶  run_shell_command Run command                                         │
│                                                                          │
│ Test result                                                              │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders multiple tool calls with different statuses (only visible ones) 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  successful-tool This tool succeeded                                   │
│                                                                          │
│ 1 line of output                                                         │
│                                                                          │
│ x  error-tool This tool failed                                           │
│                                                                          │
│ Test result                                                              │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders single successful tool call 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                          │
│                                                                          │
│ 1 line of output                                                         │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders tool call with outputFile 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  tool-with-file Tool that saved output to file                         │
│                                                                          │
│ 1 line of output                                                         │
│ Output too long and was saved to: /path/to/output.txt                    │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders two tool groups where only the last line of the previous group is visible 1`] = `
"╰──────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  tool-2 Description 2                                                  │                       ▄
│                                                                          │                       █
│ 1 line of output                                                         │                       █
╰──────────────────────────────────────────────────────────────────────────╯                       █
"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders with limited terminal height 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  tool-with-result Tool with output                                     │
│                                                                          │
│ 1 line of output                                                         │
│                                                                          │
│ ✓  another-tool Another tool                                             │
│                                                                          │
│ 1 line of output                                                         │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders with narrow terminal width 1`] = `
"╭──────────────────────────────────╮
│ ✓  very-long-tool-name-that-mig… │
│                                  │
│ 1 line of output                 │
╰──────────────────────────────────╯
"
`;

exports[`<ToolGroupMessage /> > Height Calculation > calculates available height correctly with multiple tools with results 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                          │
│                                                                          │
│ 1 line of output                                                         │
│                                                                          │
│ ✓  test-tool A tool for testing                                          │
│                                                                          │
│ 1 line of output                                                         │
│                                                                          │
│ ✓  test-tool A tool for testing                                          │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;
